Ignore revisioneer deployment errors

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,4 @@
     revisioneer_host: "{{ revisioneer_host }}"
     branch: "{{ revisioneer_branch }}"
     extract_messages: "{{ extract_messages }}"
+  ignore_errors: yes
